<resources>
    <string name="app_name">Phase 10 Counter</string>
    <string name="punkteHint">Points</string>
    <string name="add_player">Add Player</string>
    <string name="start">Start</string>
    <string name="player_message_tv">Player:</string>
    <string name="offene_phasen">Open Rounds:</string>
    <string name="phasenPlayerFragment">Rounds</string>
    <string name="phase1"><b>Round 1: </b>2 sets of 3</string>
    <string name="phase2"><b>Round 2: </b>1 set of 3 + 1 run of 4</string>
    <string name="phase3"><b>Round 3: </b>1 set of 4 + 1 run of 4</string>
    <string name="phase4"><b>Round 4: </b>1 run of 7</string>
    <string name="phase5"><b>Round 5: </b>1 run of 8</string>
    <string name="phase6"><b>Round 6: </b>1 run of 9</string>
    <string name="phase7"><b>Round 7: </b>2 sets of 4</string>
    <string name="phase8"><b>Round 8: </b>7 cards of one color</string>
    <string name="phase9"><b>Round 9: </b>1 set of 5 + 1 set of 2</string>
    <string name="phase10"><b>Round 10: </b>1 set of 5 + 1 set of 3</string>
    <string name="ok">OK</string>
    <string name="player_needs_a_name">Player must have a name</string>
    <string name="all_data_will_be_deleted">ALL Data will be deleted</string>
    <string name="are_you_sure_data_loss">Are you sure? All data of this match will be lost.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="reset_all_data_btn">End match</string>
    <string name="show_phases_sets_btn">Sets</string>
    <string name="name">Name</string>
    <string name="none">none</string>
    <string name="at_leat_2_players">At least 2 players required!</string>
    <string name="dialog_rounds_of">"Rounds of "</string>
    <string name="invalid_punkte_number">Number is invalid (too big)!</string>
    <string name="one_empty_line">\n</string>
    <string name="date">Date</string>
    <string name="back">Back</string>
    <string name="highscores">Highscores</string>
</resources>