<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:weightSum="100">

    <TextView
        android:id="@+id/tvNameHighscore"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="33"
        android:text="@string/name"
        android:textSize="18sp"
        android:textAlignment="center"
        android:padding="4dp" />

    <View
        android:layout_width="3dp"
        android:layout_height="match_parent"
        android:background="@color/light_grey" />

    <TextView
        android:id="@+id/tvPunkteHighscore"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="33"
        android:text="@string/punkteHint"
        android:textSize="18sp"
        android:textAlignment="center"
        android:padding="4dp" />

    <View
        android:layout_width="3dp"
        android:layout_height="match_parent"
        android:background="@color/light_grey" />

    <TextView
        android:id="@+id/tvDatumHighscore"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="33"
        android:text="@string/date"
        android:textSize="18sp"
        android:textAlignment="center"
        android:padding="4dp" />
</LinearLayout>